// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/types.proto";



package tcHistory.protobuf;

message ExpectedAck {
extensions 4 to 104;

  optional ccsds_mal.protobuf.BOOLEAN acceptance = 1;
  optional ccsds_mal.protobuf.BOOLEAN executionComplete = 2;
  optional ccsds_mal.protobuf.BOOLEAN executionStart = 3;
}
